# first-script-say-hello

./: pyproject.toml
first/scripts/: say_hello.py
