[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Daniil Balabanov <spacewalrus@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.scripts]
say-hello = "first.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
